# SpanForge

./: .bandit  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_REPORT.md  README.md  coverage.json  coverage_summary.py  docs-requirements.txt  environment.yml  fix_span_tests.py  labels.json  mkdocs.yml  objects.inv  pyproject.toml  requirements-llm.txt  requirements-viz.txt  requirements.txt  sitemap.xml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: docs.yml  pre-commit.yml  release.yml  security.yml  test.yml
about/changelog/: index.html
about/license/: index.html
api/config/: index.html
api/llm_agent/: index.html
api/model/: index.html
api/pipeline/: index.html
api/weak_label/: index.html
archive/: ACTION_PLAN_PRE_PHASE6.md  EVALUATION_PRE_PHASE6.md  PHASE4_COMPLETE.md  TASK2_COMPLETE.md  TEST_FIXES_NEEDED.md  llm_providers.md  phase4_architecture.md  phase_5_options_1_2_summary.md  phase_5_plan.md  production_evaluation.md
ci_cd/: index.html
configuration/: index.html
data/annotation/: registry.csv
data/caers/: .gitkeep
data/lexicon/: products.csv  symptoms.csv
docs/: annotation_guide.md  ci_cd.md  configuration.md  heuristic.md  index.html  index.md  installation.md  llm_integration.md  options_abc_summary.md  overview.md  phase_5_options_1_2_summary.md  phase_6_checklist.md  phase_6_gold_standard.md  production_workflow.md  prompting_llm.md  quickstart.md  tutorial_labeling.md
docs/about/: changelog.md  license.md  roadmap.md
docs/api/: config.md  llm_agent.md  model.md  pipeline.md  weak_label.md
docs/archive/: PHASE5_COMPLETE.md  TASK1_COMPLETE.md  TASK3_COMPLETE.md  llm_evaluation.md  phase4_refactoring.md  phase_4.5_summary.md
docs/development/: contributing.md  testing.md
docs/user-guide/: annotation.md  negation.md  pipeline.md  weak-labeling.md
examples/: README.md
examples/advanced/: batch_processing.py  caers_integration.py  llm_refinement.py
examples/annotation/: export_gold_standard.py  label_studio_setup.py  prepare_batch.py  quality_report.py
examples/basic/: config_examples.py  negation_detection.py  simple_ner.py  weak_labeling.py
examples/evaluation/: compute_metrics.py  stratified_analysis.py  visualization.py
phase_6_checklist/: index.html
prompts/: boundary_refine.txt  negation_check.txt  synonym_expand.txt
quickstart/: index.html
scripts/: AnnotationWalkthrough.ipynb  Workbook.ipynb  build_lexicon.py  build_meddra_symptom_lexicon.py  train_token_cls.py  verify_env.py
scripts/annotation/: adjudicate.py  cli.py  compare_weak_vs_gold.py  convert_labelstudio.py  evaluate_llm_refinement.py  export_weak_labels.py  import_weak_to_labelstudio.py  init_label_studio_project.py  plot_llm_metrics.py  prepare_production_batch.py  quality_report.py  refine_llm.py  register_batch.py
scripts/caers/: QUICKSTART.py  README.md  download_caers.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/annotation_guide/: index.html
site/ci_cd/: index.html
site/configuration/: index.html
site/heuristic/: index.html
site/installation/: index.html
site/llm_evaluation/: index.html
site/overview/: index.html
src/: __init__.py  config.py  knowledge_retrieval.py  llm_agent.py  model.py  model_token_cls.py  pipeline.py  weak_label.py
tests/: README.md  assertions.py  base.py  conftest.py  data_refined.jsonl  data_sample_weak.jsonl  test_caers_integration.py  test_config.py  test_curation_integrity.py  test_evaluate_llm.py  test_forward.py  test_knowledge_retrieval.py  test_llm_agent.py  test_llm_refine.py  test_model_token_cls.py  test_overlap_merge.py  test_pipeline.py  test_weak_label.py
tutorial_labeling/: index.html
(+67 files in other folders)
